@@ -8,6 +8,7 @@
     * Add topic pages to context menu on message lists
     * New highlighting interface
     * Add ability to highlight all admins, mods or VIPs
+    * Add the GameFAQs clock to QuickPost
 
 2010-05-12:
     * version 0.7.7
